[tool.poetry]
name = "vcsi"
version = "7.0.16"
description = "Create video contact sheets, thumbnails, screenshots"
authors = ["Nils Amiet <amietn@foobar.tld>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
vcsi = "vcsi.vcsi:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
